# MiniSpire

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  REGRESSION_CHECKLIST.md  build_log.txt  game_config.ini  plan.md
.codebuddy/plans/: 主菜单背景故事文本居中_71939298.md
.trae/documents/: 主菜单添加玩法介绍按钮.md  主菜单添加玩法介绍按钮计划.md  尖塔风格美术与音频升级实施计划.md  战斗添加开发者测试按钮.md  游戏系统全面优化实施计划.md
assets/: THIRD_PARTY_LICENSES.md
docs/: IMPLEMENTATION_NOTES.md
scripts/: dl_bgm.js  dl_one.js  dl_sfx.js  dl_ui.js  download_assets.ps1  download_beautify.bat  download_beautify.js  download_beautify_assets.ps1  download_enemy_assets_openmoji.ps1  download_ui_emoji_openmoji.ps1  generate_backgrounds.js  generate_bgm.js
src/: main.cpp  mingw_compat.cpp
